--- a/SimpleLoginApp/SimpleLoginApp/SimpleLoginApp.csproj
+++ b/SimpleLoginApp/SimpleLoginApp/SimpleLoginApp.csproj
@@ -72,6 +72,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Windows\Admin\AddUser.xaml.cs">
       <DependentUpon>AddUser.xaml</DependentUpon>
     </Compile>
@@ -81,6 +82,7 @@
     <Compile Include="Windows\Admin\ManageUser.xaml.cs">
       <DependentUpon>ManageUser.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\Behaviour\RelayCommand.cs" />
     <Compile Include="Windows\ChildWindows\ActiveProjects.xaml.cs">
       <DependentUpon>ActiveProjects.xaml</DependentUpon>
     </Compile>
