--- a/SimpleLoginApp/BMS.App/BMS.App.csproj
+++ b/SimpleLoginApp/BMS.App/BMS.App.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <RootNamespace>WpfApp1.App</RootNamespace>
+    <AssemblyName>WpfApp1.App</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
