--- a/SimpleLoginApp/BMS.Models/BMS.Models.csproj
+++ b/SimpleLoginApp/BMS.Models/BMS.Models.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <RootNamespace>WpfApp1.Models</RootNamespace>
+    <AssemblyName>WpfApp1.Models</AssemblyName>
   </PropertyGroup>
 
 </Project>
