Implemented proper injection (YES!!YES!!YES!!YES!!YES!!YES!!grlrkltjrhtajkh мн се кефя!) Edited AdminPanel to use the architecture Changed IPageViewModel's Name to ViewName to avoid confusion Formatted usings and insetred them inside namespaces

--- a/BmsWpf/BmsWpf.csproj
+++ b/BmsWpf/BmsWpf.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Sessions\Session.cs" />
+    <Compile Include="ViewModels\AdminPanelViewModel.cs" />
     <Compile Include="ViewModels\ContragentViewModel.cs" />
     <Compile Include="ViewModels\IPageViewModel.cs" />
     <Compile Include="ViewModels\LoginFormViewModel.cs" />
