--- a/BmsWpf.Services/BmsWpf.Services.csproj
+++ b/BmsWpf.Services/BmsWpf.Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Automapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Ninject" Version="3.3.4" />
   </ItemGroup>
