--- a/BmsWpf.Services/BmsWpf.Services.csproj
+++ b/BmsWpf.Services/BmsWpf.Services.csproj
@@ -9,7 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Automapper" Version="6.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
+    <PackageReference Include="MicrosoftExpressionInteractions" Version="3.0.40218" />
     <PackageReference Include="Ninject" Version="3.3.4" />
+    <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
   </ItemGroup>
 
   <ItemGroup>
