--- a/BmsWpf/packages.config
+++ b/BmsWpf/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
+  <package id="MicrosoftExpressionInteractions" version="3.0.40218.0" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net461" />
   <package id="System.Collections" version="4.0.11" targetFramework="net461" />
@@ -28,4 +29,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net461" />
   <package id="System.Threading" version="4.0.11" targetFramework="net461" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net461" />
 </packages>
