--- a/BmsWpf.Services/BmsWpf.Services.csproj
+++ b/BmsWpf.Services/BmsWpf.Services.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="morelinq" Version="2.9.0" />
     <PackageReference Include="Ninject" Version="3.3.4" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.2" />
+    <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
   </ItemGroup>
 
   <ItemGroup>
