--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,4 @@ $RECYCLE.BIN/
 #####
 BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
+BMS.DataBaseData/ServerConfiguration.cs
