--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
+BMS.DataBaseData/ServerConfiguration.cs
