--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,4 @@ BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
+BMS.DataBaseData/ServerConfiguration.cs
